--- a/feedback/Feedback.html
+++ b/feedback/Feedback.html
@@ -60,7 +60,7 @@
                     <tr>
                         <td width=100% valign="middle">
                             <font face="trebuchet ms" color="maroon" size=4>
-                                <p align="center"><a href="#"> Home</a>|<a href="#">About
+                                <p align="center"><a href="index.html"> Home</a>|<a href="#">About
                                         Us</a>|<a href="Feedback.html">Feedback</a></p>
                             </font>
                         </td>
